Fix notebooks and add them to CI testing.

--- a/example/workflow/classification.ipynb
+++ b/example/workflow/classification.ipynb
@@ -211,14 +211,15 @@
     }
    ],
    "source": [
-    "annotations = ModelAnnotation.from_model_string(aeon_string)\n",
-    "assertions = get_model_assertions(annotations)\n",
-    "named_properties = get_model_properties(annotations)\n",
+    "annotations = ModelAnnotation.from_aeon(aeon_string)\n",
+    "assertions = Classification.read_dynamic_assertions(annotations)\n",
+    "named_properties = Classification.read_dynamic_properties(annotations)\n",
+    "named_properties = { k:v for (k,v) in named_properties }\n",
     "\n",
     "for assertion in assertions:\n",
     "    print(\"Assertion:\\t\", assertion)\n",
     "print()\n",
-    "for (name, prop) in named_properties:\n",
+    "for (name, prop) in named_properties.items():\n",
     "    print(f\"Property named `{name}`:\\t\", prop)"
    ]
   },
@@ -269,25 +270,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded model and properties out of `mapk-annotated.aeon`.\n",
-      "Parsing formulae and generating symbolic representation...\n",
-      "Successfully parsed all 1 required property (assertion) and all 4 classification properties.\n",
-      "Successfully encoded model with 18 variables and 4 parameters.\n",
-      "Model admits 16 instances.\n",
-      "Evaluating required properties (this may take some time)...\n",
-      "Required properties successfully evaluated.\n",
-      "15 instances satisfy all required properties.\n",
-      "Evaluating classification properties (this may take some time)...\n",
-      "Classification properties successfully evaluated.\n",
-      "Generating classification mapping based on model-checking results...\n",
-      "Results saved to `classification-archive.zip`.\n"
+      "{Class([\"p2\"]): ColorSet(cardinality=3, symbolic_size=6), Class([\"p1\", \"p2\"]): ColorSet(cardinality=9, symbolic_size=6), Class([\"p4\"]): ColorSet(cardinality=3, symbolic_size=6)}\n"
      ]
     }
    ],
    "source": [
     "model_path = \"mapk-annotated.aeon\"\n",
     "output_zip = \"classification-archive.zip\"\n",
-    "run_hctl_classification(model_path, output_zip)"
+    "\n",
+    "bn = BooleanNetwork.from_file(\"mapk-annotated.aeon\")\n",
+    "graph = AsynchronousGraph(bn)\n",
+    "\n",
+    "classes = Classification.classify_dynamic_properties(graph, named_properties, assertions)\n",
+    "print(classes)\n",
+    "\n",
+    "Classification.save_classification(output_zip, bn, classes, annotations)"
    ]
   },
   {
@@ -311,13 +308,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'0001': ColorSet(cardinality=3), '0100': ColorSet(cardinality=3), '1100': ColorSet(cardinality=9)}\n"
+      "{Class([\"p4\"]): ColorSet(cardinality=3, symbolic_size=6), Class([\"p2\"]): ColorSet(cardinality=3, symbolic_size=6), Class([\"p1\", \"p2\"]): ColorSet(cardinality=9, symbolic_size=6)}\n"
      ]
     }
    ],
    "source": [
-    "class_mapping, original_model_str = load_class_archive(output_zip)\n",
-    "print(class_mapping)"
+    "loaded_bn, loaded_classes, loaded_annotations = Classification.load_classification(output_zip)\n",
+    "print(loaded_classes)"
    ]
   },
   {
@@ -349,9 +346,18 @@
    "execution_count": 6,
    "id": "3f1d93b9-dc0b-4a51-ab21-aadc32bcc19e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{Class([\"stability\"]): ColorSet(cardinality=8, symbolic_size=3), Class([\"disorder\"]): ColorSet(cardinality=6, symbolic_size=5), Class([\"stability\", \"stability\"]): ColorSet(cardinality=2, symbolic_size=5)}\n"
+     ]
+    }
+   ],
    "source": [
-    "run_attractor_classification(model_path, \"attractor-archive.zip\")"
+    "classes = Classification.classify_attractor_bifurcation(graph)\n",
+    "print(classes)"
    ]
   },
   {
@@ -360,25 +366,6 @@
    "metadata": {},
    "source": [
     "We can work with the result of this process in the same way we worked with the HCTL classification result. In particular, you can also visualize this classification using the interactive GUI. Notice that in this case, the class labels are actually the types of attractors encountered in each class, as opposed to HCTL properties."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "103b9834-9813-4912-b4fe-e7885e880265",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'1 x Stability': ColorSet(cardinality=8), '1 x Disorder': ColorSet(cardinality=6), '2 x Stability': ColorSet(cardinality=2)}\n"
-     ]
-    }
-   ],
-   "source": [
-    "attr_classes, original_model_str = load_class_archive(\"attractor-archive.zip\")\n",
-    "print(attr_classes)"
    ]
   },
   {
@@ -406,28 +393,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6781d7b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stg = SymbolicAsyncGraph(BooleanNetwork.from_aeon(original_model_str))\n",
-    "dna_on = stg.fix_implicit_function(\"DNA_damage\", [], True)\n",
-    "dna_off = stg.fix_implicit_function(\"DNA_damage\", [], False)\n",
-    "egfr_on = stg.fix_implicit_function(\"EGFR_stimulus\", [], True)\n",
-    "egfr_off = stg.fix_implicit_function(\"EGFR_stimulus\", [], False)\n",
+    "dna_on = graph.mk_function_colors(\"DNA_damage\", \"true\")\n",
+    "dna_off = graph.mk_function_colors(\"DNA_damage\", \"false\")\n",
+    "egfr_on = graph.mk_function_colors(\"EGFR_stimulus\", \"true\")\n",
+    "egfr_off = graph.mk_function_colors(\"EGFR_stimulus\", \"false\")\n",
     "\n",
     "class_1 = dna_on.intersect(egfr_on)\n",
     "class_2 = dna_on.intersect(egfr_off)\n",
     "class_3 = dna_off\n",
     "\n",
     "custom_mapping = {\n",
-    "    \"DNA_with_EGFR\": class_1,\n",
-    "    \"DNA_without_EGFR\": class_2,\n",
-    "    \"no_DNA\": class_3\n",
+    "    Class(\"DNA_with_EGFR\"): class_1,\n",
+    "    Class(\"DNA_without_EGFR\"): class_2,\n",
+    "    Class(\"no_DNA\"): class_3\n",
     "}\n",
     "\n",
-    "save_class_archive(\"custom-archive.zip\", custom_mapping, stg.network().to_aeon())"
+    "Classification.save_classification(\"custom-archive.zip\", bn, custom_mapping)"
    ]
   },
   {
@@ -440,8 +426,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "eac81dd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{Class([\"DNA_without_EGFR\"]): ColorSet(cardinality=4, symbolic_size=4), Class([\"DNA_with_EGFR\"]): ColorSet(cardinality=4, symbolic_size=4), Class([\"no_DNA\"]): ColorSet(cardinality=8, symbolic_size=3)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "loaded_bn, loaded_classes, loaded_annotations = Classification.load_classification(\"custom-archive.zip\")\n",
+    "print(loaded_classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "471cbf9f-ce21-4cf3-9f9a-d7b88f48bd14",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -463,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
