--- a/example/workflow/comparing-partial-and-full-functions.ipynb
+++ b/example/workflow/comparing-partial-and-full-functions.ipynb
@@ -37,14 +37,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "BooleanNetwork(variables = 5, parameters = 2, regulations = 4)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BooleanNetwork(variables=5, regulations=4, explicit_parameters=2, implicit_parameters=3)\n"
+     ]
     }
    ],
    "source": [
@@ -57,11 +54,11 @@
     "rg.add_regulation({ 'source': \"d\", 'target': \"a\" })\n",
     "rg.add_regulation({ 'source': \"a\", 'target': \"e\" })\n",
     "bn = BooleanNetwork(rg)\n",
-    "bn.add_parameter({ 'name': \"p1\", 'arity': 3 })\n",
-    "bn.add_parameter({ 'name': \"p2\", 'arity': 1 })\n",
+    "bn.add_explicit_parameter(\"p1\", 3)\n",
+    "bn.add_explicit_parameter(\"p2\", 1)\n",
     "bn.set_update_function(\"a\", \"p1(b,c,d)\")\n",
     "bn.set_update_function(\"e\", \"p2(a)\")\n",
-    "bn"
+    "print(bn)"
    ]
   },
   {
@@ -79,22 +76,19 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'(a & p1(c, d, e))'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a & p1(c, d, e)\n"
+     ]
     }
    ],
    "source": [
-    "partial = UpdateFunction(\"a & p1(c,d,e)\", bn)\n",
-    "compatible = UpdateFunction(\"a & (c | d) & !e\", bn)\n",
-    "incompatible = UpdateFunction(\"!a & c\", bn)\n",
+    "partial = UpdateFunction(bn, \"a & p1(c,d,e)\")\n",
+    "compatible = UpdateFunction(bn, \"a & (c | d) & !e\")\n",
+    "incompatible = UpdateFunction(bn, \"!a & c\")\n",
     "\n",
-    "partial.to_string(bn)"
+    "print(partial)"
    ]
   },
   {
@@ -127,11 +121,11 @@
     "\n",
     "# We can also get the list of \"symbolic variables\" that are used to represent the \"network variables\" as well as\n",
     "# the instantiations of the individual unknown functions:\n",
-    "state_variables = ctx.state_variables()\n",
-    "id_p1 = bn.find_parameter(\"p1\")\n",
-    "id_p2 = bn.find_parameter(\"p2\")\n",
-    "p1_variables = [ var for (inputs, var) in  ctx.get_explicit_function_table(id_p1) ]\n",
-    "p2_variables = [ var for (inputs, var) in  ctx.get_explicit_function_table(id_p2) ]\n",
+    "state_variables = ctx.network_bdd_variables()\n",
+    "id_p1 = bn.find_explicit_parameter(\"p1\")\n",
+    "id_p2 = bn.find_explicit_parameter(\"p2\")\n",
+    "p1_variables = [ var for (inputs, var) in  ctx.get_function_table(id_p1) ]\n",
+    "p2_variables = [ var for (inputs, var) in  ctx.get_function_table(id_p2) ]\n",
     "print(len(state_variables), len(p1_variables), len(p2_variables))"
    ]
   },
@@ -153,16 +147,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bdd(size=512, cardinality=65536)\n",
-      "Bdd(size=6, cardinality=49152)\n",
-      "Bdd(size=4, cardinality=65536)\n"
+      "Bdd(vars = 18, len = 512, cardinality = 65536)\n",
+      "Bdd(vars = 18, len = 6, cardinality = 49152)\n",
+      "Bdd(vars = 18, len = 4, cardinality = 65536)\n"
      ]
     }
    ],
    "source": [
-    "partial_bdd = ctx.mk_update_function_is_true(partial)\n",
-    "compatible_bdd = ctx.mk_update_function_is_true(compatible)\n",
-    "incompatible_bdd = ctx.mk_update_function_is_true(incompatible)\n",
+    "partial_bdd = ctx.mk_update_function(partial)\n",
+    "compatible_bdd = ctx.mk_update_function(compatible)\n",
+    "incompatible_bdd = ctx.mk_update_function(incompatible)\n",
     "print(partial_bdd)\n",
     "print(compatible_bdd)\n",
     "print(incompatible_bdd)"
@@ -199,14 +193,14 @@
     "# 2. We eliminate the function inputs (state variables) from the BDD, such that we only keep those\n",
     "# instantiations for which we have *all* input combinations present (i.e. the whole function is\n",
     "# equivalent, not just some specific input-output pairs).\n",
-    "compatible_instantiations = compatible_instantiations.project_for_all(state_variables)\n",
+    "compatible_instantiations = compatible_instantiations.r_for_all(state_variables)\n",
     "\n",
     "# If the set is empty, it is equivalent to false. This set should not be empty.\n",
     "print(compatible_instantiations.is_false())\n",
     "\n",
     "# However, this set should be empty because the two functions are incompatible.\n",
     "incompatible_instantiations = partial_bdd.l_iff(incompatible_bdd)\n",
-    "incompatible_instantiations = incompatible_instantiations.project_for_all(state_variables)\n",
+    "incompatible_instantiations = incompatible_instantiations.r_for_all(state_variables)\n",
     "print(incompatible_instantiations.is_false())"
    ]
   },
@@ -234,16 +228,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['(((!v_1 & v_2) & !v_3) | (v_1 & !v_3))']\n"
+      "ColorModel({'p1': '((!x_0 & (x_1 & !x_2)) | (x_0 & !x_2))'})\n"
      ]
     }
    ],
    "source": [
-    "stg = SymbolicAsyncGraph(bn)\n",
-    "projection = SymbolicProjection(stg, compatible_instantiations, retained_functions=[\"a\"])\n",
-    "for (state, functions) in projection:\n",
-    "    print([ function.to_string() for (var, function) in functions])"
+    "stg = AsynchronousGraph(bn)\n",
+    "symbolic_set = ColorSet(stg.symbolic_context(), compatible_instantiations)\n",
+    "for function in symbolic_set.items(retained=[\"p1\"]):\n",
+    "    print(function)    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50352c75-751c-4d69-895e-d7596b9bcfbf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -262,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
