--- a/example/workflow/computing-fixed-points.ipynb
+++ b/example/workflow/computing-fixed-points.ipynb
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BooleanNetwork(variables = 66, parameters = 0, regulations = 152)\n"
+      "BooleanNetwork(variables=66, regulations=152, explicit_parameters=0, implicit_parameters=0)\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BooleanNetwork(variables = 53, parameters = 13, regulations = 120)\n"
+      "BooleanNetwork(variables=53, regulations=120, explicit_parameters=13, implicit_parameters=0)\n"
      ]
     }
    ],
@@ -121,10 +121,10 @@
     }
    ],
    "source": [
-    "stg = SymbolicAsyncGraph(bn)\n",
-    "print(f\"STG has {int(stg.unit_vertices().cardinality())} states and {int(stg.unit_colors().cardinality())} color.\")\n",
-    "stg_inlined = SymbolicAsyncGraph(bn_inlined)\n",
-    "print(f\"STG has {int(stg_inlined.unit_vertices().cardinality())} states and {int(stg_inlined.unit_colors().cardinality())} colors.\")"
+    "stg = AsynchronousGraph(bn)\n",
+    "print(f\"STG has {int(stg.mk_unit_vertices().cardinality())} states and {int(stg.mk_unit_colors().cardinality())} color.\")\n",
+    "stg_inlined = AsynchronousGraph(bn_inlined)\n",
+    "print(f\"STG has {int(stg_inlined.mk_unit_vertices().cardinality())} states and {int(stg_inlined.mk_unit_colors().cardinality())} colors.\")"
    ]
   },
   {
@@ -142,6 +142,8 @@
    "source": [
     "### Solver-based fixed-point enumeration\n",
     "\n",
+    "**Solver-based identification is currently disabled.**\n",
+    "\n",
     "First, we show how to use a solver in AEON.py to detect fixed-points. Internally, this relies on Z3, \n",
     "which is a bit of an overkill for this kind of task but is relatively reliable and easy to integrate. \n",
     "\n",
@@ -158,21 +160,12 @@
    "execution_count": 5,
    "id": "27e298d5-dbc0-448d-8729-96327c6426b8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2048\n",
-      "2048\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fixed_point_list = FixedPoints.solver_list(stg, limit=100000)\n",
-    "print(len(fixed_point_list))\n",
-    "fixed_point_list_inlined = FixedPoints.solver_list(stg_inlined, limit=10000)\n",
-    "print(len(fixed_point_list_inlined))"
+    "#fixed_point_list = FixedPoints.solver_list(stg, limit=100000)\n",
+    "#print(len(fixed_point_list))\n",
+    "#fixed_point_list_inlined = FixedPoints.solver_list(stg_inlined, limit=10000)\n",
+    "#print(len(fixed_point_list_inlined))"
    ]
   },
   {
@@ -191,27 +184,19 @@
    "execution_count": 6,
    "id": "e0e68ebe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2048\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Make sure not to mix the symbolic sets from `stg` and `stg_inlined`.\n",
     "# While they technically have the same number of symbolic variables,\n",
     "# they are not guaranteed to be mutually compatible.\n",
     "\n",
-    "solver_result = stg_inlined.empty_colored_vertices()\n",
-    "for x in fixed_point_list_inlined:\n",
-    "    # `x` is a singleton set: it contains just one element.\n",
-    "    assert x.is_singleton()\n",
+    "# solver_result = stg_inlined.empty_colored_vertices()\n",
+    "# for x in fixed_point_list_inlined:\n",
+    "#     # `x` is a singleton set: it contains just one element.\n",
+    "#     assert x.is_singleton()\n",
     "    \n",
-    "    solver_result = solver_result.union(x)\n",
-    "print(int(solver_result.cardinality()))"
+    "#     solver_result = solver_result.union(x)\n",
+    "# print(int(solver_result.cardinality()))"
    ]
   },
   {
@@ -247,7 +232,7 @@
     "print(int(fp_inlined.cardinality()))\n",
     "\n",
     "# Naturally, the results should be the same as the ones from the solver.\n",
-    "assert fp_inlined == solver_result"
+    "# assert fp_inlined == solver_result"
    ]
   },
   {
@@ -325,8 +310,8 @@
    ],
    "source": [
     "# We can even iterate over the vertices and print them all out:\n",
-    "for vertex in fp_inlined.vertices().iterator():\n",
-    "    print(vertex[:10], \"...\")"
+    "for vertex in fp_inlined.vertices():\n",
+    "    print(vertex.values()[:10], \"...\")"
    ]
   },
   {
@@ -357,11 +342,11 @@
     }
    ],
    "source": [
-    "symbolic_space = stg.fix_subspace({ \"v_sporulation\": False })\n",
+    "symbolic_space = stg.mk_subspace({ \"v_sporulation\": False })\n",
     "fixed_points = FixedPoints.symbolic(stg, restriction=symbolic_space)\n",
     "print(f\"Found {int(fixed_points.cardinality())} fixed-points\")\n",
     "\n",
-    "symbolic_space = stg.fix_subspace({ \"v_sporulation\": True })\n",
+    "symbolic_space = stg.mk_subspace({ \"v_sporulation\": True })\n",
     "fixed_points = FixedPoints.symbolic(stg, restriction=symbolic_space)\n",
     "print(f\"Found {int(fixed_points.cardinality())} fixed-points\")"
    ]
@@ -413,6 +398,14 @@
     "\n",
     " > Right now, AEON.py can only do projections to vertices (`VertexSet`) and colors (`ColorSet`). However, the underlying Rust code can actually do projections to any subset of variables or parameters. The main limitation is that we don't have a type safe way of manipulating such projections in Python yet. If you want to use such feature for something, get in touch and we can add it :)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5dbc7def-9ba1-4feb-b674-4131c4f48cb1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -431,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
