--- a/example/workflow/model-checking.ipynb
+++ b/example/workflow/model-checking.ipynb
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BooleanNetwork(variables = 17, parameters = 0, regulations = 78)\n"
+      "BooleanNetwork(variables=17, regulations=78, explicit_parameters=0, implicit_parameters=4)\n"
      ]
     }
    ],
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BooleanNetwork(variables = 13, parameters = 4, regulations = 60)\n"
+      "BooleanNetwork(variables=13, regulations=60, explicit_parameters=4, implicit_parameters=0)\n"
      ]
     }
    ],
@@ -148,7 +148,7 @@
    },
    "outputs": [],
    "source": [
-    "stg = get_extended_stg(bn, 3)"
+    "stg = AsynchronousGraph.mk_for_model_checking(bn, 3)"
    ]
   },
   {
@@ -175,8 +175,8 @@
     }
    ],
    "source": [
-    "print(SymbolicAsyncGraph(bn).symbolic_context().num_extra_state_variables())\n",
-    "print(stg.symbolic_context().num_extra_state_variables())"
+    "print(AsynchronousGraph(bn).symbolic_context().extra_bdd_variable_count())\n",
+    "print(stg.symbolic_context().extra_bdd_variable_count())"
    ]
   },
   {
@@ -287,19 +287,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ColoredVertexSet(cardinality = 3605, unique vertices = 1602, unique colors = 16), ColoredVertexSet(cardinality = 2, unique vertices = 2, unique colors = 2)]\n",
-      "ColoredVertexSet(cardinality = 3607, unique vertices = 1602, unique colors = 16)\n"
+      "[ColoredVertexSet(cardinality=3605, colors=16, vertices=1602, symbolic_size=70), ColoredVertexSet(cardinality=2, colors=2, vertices=2, symbolic_size=35)]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ColoredVertexSet(cardinality=3607, colors=16, vertices=1602, symbolic_size=81)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# classical computation\n",
-    "attractors = find_attractors(stg)\n",
+    "attractors = Attractors.attractors(stg)\n",
     "print(attractors)\n",
     "\n",
     "# formula for attractors\n",
-    "attractors_mc = model_check(\"!{x}: AG EF {x}\", stg)\n",
-    "print(attractors_mc)"
+    "attractors_mc = ModelChecking.verify(stg, \"!{x}: AG EF {x}\")\n",
+    "attractors_mc"
    ]
   },
   {
@@ -337,17 +346,20 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ColoredVertexSet(cardinality = 12, unique vertices = 4, unique colors = 10)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "ColoredVertexSet(cardinality=12, colors=10, vertices=4, symbolic_size=52)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# formula for steady states\n",
-    "fixed_point_attrs = model_check(\"!{x}: AX {x}\", stg)\n",
-    "print(fixed_point_attrs)"
+    "fixed_point_attrs = ModelChecking.verify(stg, \"!{x}: AX {x}\")\n",
+    "fixed_point_attrs"
    ]
   },
   {
@@ -361,17 +373,20 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ColoredVertexSet(cardinality = 2, unique vertices = 2, unique colors = 1)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "ColoredVertexSet(cardinality=2, colors=1, vertices=2, symbolic_size=18)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# formula for non-trivial cyclic attractors\n",
-    "cyclic_attrs = model_check(\"AG (!{x}: (AX (~{x} & AF {x})))\", stg)\n",
-    "print(cyclic_attrs)"
+    "cyclic_attrs = ModelChecking.verify(stg, \"AG (!{x}: (AX (~{x} & AF {x})))\")\n",
+    "cyclic_attrs"
    ]
   },
   {
@@ -385,17 +400,20 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ColoredVertexSet(cardinality = 4, unique vertices = 4, unique colors = 2)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "ColoredVertexSet(cardinality=4, colors=2, vertices=4, symbolic_size=45)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# formula for steady states, in case there are at least two of them\n",
-    "more_than_two_fixed_points = model_check(\"!{x}: 3{y}: ((@{x}: ~{y} & AX {x}) & (@{y}: AX {y}))\", stg)\n",
-    "print(more_than_two_fixed_points)"
+    "more_than_two_fixed_points = ModelChecking.verify(stg, \"!{x}: 3{y}: ((@{x}: ~{y} & AX {x}) & (@{y}: AX {y}))\")\n",
+    "more_than_two_fixed_points"
    ]
   },
   {
@@ -440,18 +458,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ColoredVertexSet(cardinality = 10, unique vertices = 2, unique colors = 9)\n",
-      "ColoredVertexSet(cardinality = 2, unique vertices = 2, unique colors = 1)\n"
+      "ColoredVertexSet(cardinality=10, colors=9, vertices=2, symbolic_size=25)\n",
+      "ColoredVertexSet(cardinality=2, colors=1, vertices=2, symbolic_size=31)\n"
      ]
     }
    ],
    "source": [
-    "fixed_point_p53 = model_check(\"!{x}: AX ({x} & v_p53)\", stg)\n",
-    "print(fixed_point_p53)\n",
+    "fixed_point_p53 = ModelChecking.verify(stg, \"!{x}: AX ({x} & v_p53)\")\n",
+    "print(repr(fixed_point_p53))\n",
     "\n",
     "attractors_non_p53 = fixed_point_attrs.minus(fixed_point_p53)\n",
-    "attractors_non_p53_v2 = model_check(\"!{x}: AX ({x} & ~v_p53)\", stg)\n",
-    "print(attractors_non_p53)\n",
+    "attractors_non_p53_v2 = ModelChecking.verify(stg, \"!{x}: AX ({x} & ~v_p53)\")\n",
+    "print(repr(attractors_non_p53))\n",
     "\n",
     "assert attractors_non_p53 == attractors_non_p53_v2"
    ]
@@ -506,12 +524,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Bind {x}: (Ag (Ef {x})))\n"
+      "(!{x}: (AG (EF {x})))\n"
      ]
     }
    ],
    "source": [
-    "tree = HctlTreeNode(\"!{x}: AG EF {x}\", bn)\n",
+    "tree = HctlFormula(\"!{x}: AG EF {x}\")\n",
     "print(tree)"
    ]
   },
@@ -543,16 +561,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Bind {x}: (Exists {xx}: ((Jump {x}: ((~ {xx}) & (Ax {x}))) & (Jump {xx}: (Ax {xx})))))\n",
-      "(Bind {x}: (Exists {y}: ((Jump {x}: ((~ {y}) & (Ax {x}))) & (Jump {y}: (Ax {y})))))\n"
+      "(!{x}: (3{y}: ((@{x}: ((~{y}) & (AX {x}))) & (@{y}: (AX {y})))))\n",
+      "(!{x}: (3{xx}: ((@{x}: ((~{xx}) & (AX {x}))) & (@{xx}: (AX {xx})))))\n"
      ]
     }
    ],
    "source": [
-    "tree = HctlTreeNode(\"!{x}: 3{y}: ((@{x}: ~{y} & AX {x}) & (@{y}: AX {y}))\", bn)\n",
+    "tree = HctlFormula(\"!{x}: 3{y}: ((@{x}: ~{y} & AX {x}) & (@{y}: AX {y}))\")\n",
     "print(tree)\n",
     "\n",
-    "tree_exact = HctlTreeNode.build_exact_from_formula(\"!{x}: 3{y}: ((@{x}: ~{y} & AX {x}) & (@{y}: AX {y}))\")\n",
+    "# Passing a symbolic context causes the formula to be validated/minimized against that network.\n",
+    "tree_exact = HctlFormula(\"!{x}: 3{y}: ((@{x}: ~{y} & AX {x}) & (@{y}: AX {y}))\", minimize_with=SymbolicContext(bn))\n",
     "print(tree_exact)"
    ]
   },
@@ -570,14 +589,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'xx', 'x'}\n",
-      "{'x', 'y'}\n"
+      "{'y', 'x'}\n",
+      "{'x', 'xx'}\n"
      ]
     }
    ],
    "source": [
-    "print(tree.collect_unique_hctl_vars())\n",
-    "print(tree_exact.collect_unique_hctl_vars())"
+    "print(tree.used_state_variables())\n",
+    "print(tree_exact.used_state_variables())"
    ]
   },
   {
@@ -606,20 +625,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Bind {x}: (Ax ({x} & v_p53)))\n",
-      "(Ax ({x} & v_p53))\n",
-      "Ax\n"
+      "(!{x}: (AX ({x} & v_p53)))\n",
+      "(AX ({x} & v_p53))\n",
+      "all_next\n"
      ]
     }
    ],
    "source": [
-    "node = HctlTreeNode(\"!{x}: AX ({x} & v_p53)\", bn)\n",
+    "node = HctlFormula(\"!{x}: AX ({x} & v_p53)\")\n",
     "print(node)\n",
     "\n",
-    "child = node.get_children()[0]\n",
+    "child = node.children()[0]\n",
     "print(child)\n",
     "\n",
-    "child_operator = child.get_operator()\n",
+    "child_operator = child.operator()\n",
     "print(child_operator)"
    ]
   },
@@ -646,10 +665,10 @@
    },
    "outputs": [],
    "source": [
-    "tree = HctlTreeNode(\"!{x}: AG EF {x}\", bn)\n",
-    "result_v1 = model_check(tree, stg)\n",
+    "tree = HctlFormula(\"!{x}: AG EF {x}\")\n",
+    "result_v1 = ModelChecking.verify(stg, tree)\n",
     "\n",
-    "result_v2 = model_check(\"!{x}: AG EF {x}\", stg)\n",
+    "result_v2 = ModelChecking.verify(stg, \"!{x}: AG EF {x}\")\n",
     "assert result_v1 == result_v2"
    ]
   },
@@ -700,7 +719,7 @@
    },
    "outputs": [],
    "source": [
-    "intermediate_result = model_check(\"!{x}: AX ({x} & v_p53)\", stg, sanitize=False)"
+    "intermediate_result = ModelChecking.verify(stg, \"!{x}: AX ({x} & v_p53)\")"
    ]
   },
   {
@@ -729,7 +748,7 @@
     "extended_formula = \"EF %p%\"\n",
     "context_mapping = {\"p\": intermediate_result}\n",
     "\n",
-    "result = model_check_extended(extended_formula, stg, context_mapping)"
+    "result = ModelChecking.verify(stg, extended_formula, context_mapping)"
    ]
   },
   {
@@ -755,7 +774,7 @@
    },
    "outputs": [],
    "source": [
-    "result_one_step = model_check(\"EF (!{x}: AX ({x} & v_p53))\", stg)\n",
+    "result_one_step = ModelChecking.verify(stg, \"EF (!{x}: AX ({x} & v_p53))\")\n",
     "assert result == result_one_step"
    ]
   },
@@ -784,7 +803,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
