Add bbm model filtering via config.

--- a/example/workflow/bbm.ipynb
+++ b/example/workflow/bbm.ipynb
@@ -35,15 +35,26 @@
    "id": "9f8df5a0",
    "metadata": {},
    "source": [
-    "Let's first request the list of possible IDs. The fetch operations may take a few seconds, as we are accessing the external database endpoint."
+    "### Filtering model IDs\n",
+    "\n",
+    "Let's first check out how we can request and filter model IDs.\n",
+    "\n",
+    "You can either request all IDs in the database, or filter them according to number of variables, inputs, regulations, or keywords. Let's check both variants."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fb3dd4ec",
+   "id": "894e1faa",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "230\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -61,7 +72,78 @@
    ],
    "source": [
     "ids = BiodivineBooleanModels.fetch_ids()\n",
+    "print(len(ids))  # Show the total number of models\n",
     "ids[:5]  # Show the first 5 ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fc07bfa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty config:\n",
+      "\tBbmFilterConfig(variables=<None,None>, inputs=<None,None>, regulations=<None,None>, keywords=[])\n",
+      "Initialized config:\n",
+      "\tBbmFilterConfig(variables=<10,20>, inputs=<None,None>, regulations=<None,None>, keywords=[\"cell-collective\", \"curated\"])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we can prepare the filtering using the BbmFilterConfig instance\n",
+    "config = BbmFilterConfig()\n",
+    "print(f\"Empty config:\\n\\t{config}\")\n",
+    "\n",
+    "config[\"min_variables\"] = 10\n",
+    "config[\"max_variables\"] = 20\n",
+    "config[\"keywords\"] = [\"cell-collective\", \"curated\"]\n",
+    "print(f\"Initialized config:\\n\\t{config}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fb3dd4ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['dad447c8-c14d-40d2-8496-d8953690a20a',\n",
+       " '36dca970-8bea-4620-9088-8da2890211a4',\n",
+       " '86248135-ed19-44ea-a13b-daf0ca504986',\n",
+       " '02329d2b-8da8-4c97-86ae-743ad3f654ec',\n",
+       " '20a7ff67-dc62-4240-b2ac-6aa12382d4a0']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ids = BiodivineBooleanModels.fetch_ids(config)\n",
+    "print(len(ids))  # Show the total number of models\n",
+    "ids[:5]  # Show the first 5 ids"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "366f82a9",
+   "metadata": {},
+   "source": [
+    "### Requesting particular models"
    ]
   },
   {
@@ -69,12 +151,12 @@
    "id": "b8478a1c",
    "metadata": {},
    "source": [
-    "Let's now fetch a particular Boolean network querrying its ID."
+    "Let's now fetch a particular Boolean network given its ID."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "54ab6ce0",
    "metadata": {},
    "outputs": [
@@ -94,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "5aa902cc",
    "metadata": {},
    "outputs": [
