Add preproc option for input inlining.

--- a/example/workflow/bbm.ipynb
+++ b/example/workflow/bbm.ipynb
@@ -27,7 +27,9 @@
    "id": "668de7e6",
    "metadata": {},
    "source": [
-    "You can fetch all model IDs from the BBM API or query for a BN with a given ID. At the moment, the model ID is a string ID used by the API, which is not the same as the numerical id clasically used in the BBM database. This is a temporary solution until the BBM endpoint is updated to provide the numerical id as well."
+    "You can retrieve model IDs from the BBM API or query for a BN with a given ID. \n",
+    "\n",
+    "At the moment, the model ID is a string ID used by the API, which is not the same as the numerical id clasically used in the BBM database. This is a temporary solution until the BBM endpoint is updated to provide the numerical id as well."
    ]
   },
   {
@@ -35,11 +37,11 @@
    "id": "9f8df5a0",
    "metadata": {},
    "source": [
-    "### Filtering model IDs\n",
+    "### Retrieving and filtering model IDs\n",
     "\n",
     "Let's first check out how we can request and filter model IDs.\n",
     "\n",
-    "You can either request all IDs in the database, or filter them according to number of variables, inputs, regulations, or keywords. Let's check both variants."
+    "You can either retrieve all IDs in the database, or filter them according to number of variables, inputs, regulations, or keywords. Let's check both variants."
    ]
   },
   {
@@ -94,7 +96,7 @@
     }
    ],
    "source": [
-    "# we can prepare the filtering using the BbmFilterConfig instance\n",
+    "# We can configure the filtering using the BbmFilterConfig instance\n",
     "config = BbmFilterConfig()\n",
     "print(f\"Empty config:\\n\\t{config}\")\n",
     "\n",
@@ -143,7 +145,7 @@
    "id": "366f82a9",
    "metadata": {},
    "source": [
-    "### Requesting particular models"
+    "### Retrieving particular models"
    ]
   },
   {
@@ -151,7 +153,7 @@
    "id": "b8478a1c",
    "metadata": {},
    "source": [
-    "Let's now fetch a particular Boolean network given its ID."
+    "Let's now retrieve a particular Boolean network using its ID. You can fetch the BN as is, or use the function arguments to adjust some network settings, such as how the inputs are handled."
    ]
   },
   {
@@ -177,6 +179,26 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "3b40913b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BooleanNetwork(variables=10, regulations=10, explicit_parameters=8, implicit_parameters=0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fetch the same network, but with inlined inputs\n",
+    "bn = BiodivineBooleanModels.fetch_network(\"b427a7d3-5158-48ab-991b-1db895dd2b4d\", inline_inputs=True)\n",
+    "print(bn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "5aa902cc",
    "metadata": {},
    "outputs": [
@@ -186,18 +208,10 @@
      "text": [
       "v_Pvr -> v_Drk\n",
       "v_Raf -> v_Dsor1\n",
-      "v_CNK -> v_Raf\n",
-      "v_Ksr -> v_Raf\n",
-      "v_Src42 -> v_Raf\n",
       "v_Ras -> v_Raf\n",
       "v_Rl -> v_Pnt\n",
       "v_Drk -> v_Sos\n",
-      "v_Pvf2 -> v_Pvr\n",
-      "v_Pvf3 -> v_Pvr\n",
-      "v_Pvf1 -> v_Pvr\n",
       "v_Dsor1 -> v_Rl\n",
-      "v_msk -> v_Rl\n",
-      "v_Sty -| v_Ras\n",
       "v_Sos -> v_Ras\n",
       "v_Aop -| v_Targets\n",
       "v_Pnt -> v_Targets\n",
