--- a/example/workflow/bbm.ipynb
+++ b/example/workflow/bbm.ipynb
@@ -145,7 +145,7 @@
    "id": "366f82a9",
    "metadata": {},
    "source": [
-    "### Retrieving particular models"
+    "### Retrieving particular networks"
    ]
   },
   {
@@ -197,9 +197,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cce372d3",
+   "metadata": {},
+   "source": [
+    "### Retrieving models with metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8300346b",
+   "metadata": {},
+   "source": [
+    "We can also retrieve a more general `BbmModel` instance that contains not only the network data, but also additional metadata. The Boolean network can then be easily extracted from this object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5aa902cc",
+   "id": "c24e4813",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BbmModel(id=b427a7d3-5158-48ab-991b-1db895dd2b4d, name=VEGF-PATHWAY-OF-DROSOPHILA, variables=10, inputs=8, regulations=18)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = BiodivineBooleanModels.fetch_model(\"b427a7d3-5158-48ab-991b-1db895dd2b4d\")\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc50f6d2",
+   "metadata": {},
+   "source": [
+    "You can select a particular method, depending whether you want to leave the model inputs free, or fix them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3b49680e",
    "metadata": {},
    "outputs": [
     {
@@ -208,10 +251,18 @@
      "text": [
       "v_Pvr -> v_Drk\n",
       "v_Raf -> v_Dsor1\n",
+      "v_CNK -> v_Raf\n",
+      "v_Ksr -> v_Raf\n",
+      "v_Src42 -> v_Raf\n",
       "v_Ras -> v_Raf\n",
       "v_Rl -> v_Pnt\n",
       "v_Drk -> v_Sos\n",
+      "v_Pvf2 -> v_Pvr\n",
+      "v_Pvf3 -> v_Pvr\n",
+      "v_Pvf1 -> v_Pvr\n",
       "v_Dsor1 -> v_Rl\n",
+      "v_msk -> v_Rl\n",
+      "v_Sty -| v_Ras\n",
       "v_Sos -> v_Ras\n",
       "v_Aop -| v_Targets\n",
       "v_Pnt -> v_Targets\n",
@@ -231,6 +282,62 @@
     }
    ],
    "source": [
+    "bn = model.to_bn_default()\n",
+    "print(bn.to_aeon())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "99f82522",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v_Pvr -> v_Drk\n",
+      "v_Raf -> v_Dsor1\n",
+      "v_CNK -> v_Raf\n",
+      "v_Ksr -> v_Raf\n",
+      "v_Src42 -> v_Raf\n",
+      "v_Ras -> v_Raf\n",
+      "v_Rl -> v_Pnt\n",
+      "v_Drk -> v_Sos\n",
+      "v_Pvf2 -> v_Pvr\n",
+      "v_Pvf3 -> v_Pvr\n",
+      "v_Pvf1 -> v_Pvr\n",
+      "v_Dsor1 -> v_Rl\n",
+      "v_msk -> v_Rl\n",
+      "v_Sty -| v_Ras\n",
+      "v_Sos -> v_Ras\n",
+      "v_Aop -| v_Targets\n",
+      "v_Pnt -> v_Targets\n",
+      "v_Rl -| v_Aop\n",
+      "$v_Aop: !v_Rl\n",
+      "$v_CNK: true\n",
+      "$v_Drk: v_Pvr\n",
+      "$v_Dsor1: v_Raf\n",
+      "$v_Ksr: true\n",
+      "$v_Pnt: v_Rl\n",
+      "$v_Pvf1: true\n",
+      "$v_Pvf2: true\n",
+      "$v_Pvf3: true\n",
+      "$v_Pvr: v_Pvf2 | v_Pvf1 | v_Pvf3\n",
+      "$v_Raf: v_Ras & v_CNK & v_Ksr & v_Src42\n",
+      "$v_Ras: v_Sos & !v_Sty\n",
+      "$v_Rl: v_Dsor1 & v_msk\n",
+      "$v_Sos: v_Drk\n",
+      "$v_Src42: true\n",
+      "$v_Sty: true\n",
+      "$v_Targets: v_Pnt & !v_Aop\n",
+      "$v_msk: true\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "bn = model.to_bn_inputs_true()\n",
     "print(bn.to_aeon())"
    ]
   }
